--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Ghosi-dev-team/DiscTSBot#readme",
   "dependencies": {
     "discord.js": "^11.5.1",
+    "mocha": "^6.2.0",
     "telnet-client": "^1.0.4"
   }
 }
